// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render a SingleMediaDropzone 1`] = `
<div
  aria-disabled="false"
  class="mediaContainer"
>
  <div
    class="uploadIndicatorContainer"
  >
    <div
      class="uploadIndicator"
    >
<<<<<<< HEAD
      <div>
        <span
          aria-label="cloud-upload"
          class="uploadIcon fa fa-cloud-upload"
        />
      </div>
=======
      <span
        aria-label="cloud-upload"
        class="uploadIcon fa fa-cloud-upload"
      />
    </div>
  </div>
<<<<<<< HEAD
  <div
    class="progressbar"
  >
    <div
      style="width:140px;height:140px;"
    >
      <svg
        class="root  "
        viewbox="0 0 100 100"
      >
        <circle
          class="background"
          cx="50"
          cy="50"
          r="50"
        />
        <path
          d="
      M 50,50 m 0,-38
      a 38,38 0 1 1 0,76
      a 38,38 0 1 1 0,-76
    "
          fill-opacity="0"
          stroke-width="8"
        />
        <path
          class="path"
          d="
      M 50,50 m 0,-38
      a 38,38 0 1 1 0,76
      a 38,38 0 1 1 0,-76
    "
          fill-opacity="0"
          stroke-width="8"
          style="stroke-dasharray:238.76104167282426px 238.76104167282426px;stroke-dashoffset:238.76104167282426px;"
        />
        <text
          class="text"
          x="50"
          y="50"
        >
          0%
        </text>
      </svg>
>>>>>>> added single media dropzone component, progress loader and upload logic
    </div>
  </div>
=======
>>>>>>> updated progress loader visibility, tests and readme
  <img
    class="thumbnail"
    src="http://lorempixel.com/400/400"
  />
  <input
    autocomplete="off"
    style="display:none;"
    type="file"
  />
</div>
`;

exports[`Render a SingleMediaDropzone while uploading 1`] = `
<div
  aria-disabled="false"
<<<<<<< HEAD
<<<<<<< HEAD
  class="mediaContainer"
>
  <div
    class="progressbar"
  >
    <div
      style="width:200px;height:200px;"
=======
  class="mediaContainer showProgressbar"
=======
  class="mediaContainer"
>>>>>>> updated progress loader visibility, tests and readme
>
  <div
    class="progressbar"
  >
    <div
      style="width:140px;height:140px;"
>>>>>>> added single media dropzone component, progress loader and upload logic
    >
      <svg
        class="root  "
        viewbox="0 0 100 100"
      >
        <circle
          class="background"
          cx="50"
          cy="50"
          r="50"
        />
        <path
          d="
      M 50,50 m 0,-38
      a 38,38 0 1 1 0,76
      a 38,38 0 1 1 0,-76
    "
          fill-opacity="0"
          stroke-width="8"
        />
        <path
          class="path"
          d="
      M 50,50 m 0,-38
      a 38,38 0 1 1 0,76
      a 38,38 0 1 1 0,-76
    "
          fill-opacity="0"
          stroke-width="8"
          style="stroke-dasharray:238.76104167282426px 238.76104167282426px;stroke-dashoffset:119.38052083641213px;"
        />
        <text
          class="text"
          x="50"
          y="50"
        >
          50%
        </text>
      </svg>
    </div>
  </div>
  <img
    class="thumbnail"
    src="http://lorempixel.com/400/400"
  />
  <input
    autocomplete="off"
    style="display:none;"
    type="file"
  />
</div>
`;
